banner component alignment fixed

--- a/src/app/baner/baner.component.css
+++ b/src/app/baner/baner.component.css
@@ -7,7 +7,10 @@
 
 .container {
     display: grid;
-    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+    /* grid-template-columns: 1fr; */
 }
 
 .title {
@@ -79,9 +82,13 @@
 }
 
 :host.pc .container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr;
-    margin: 0 20rem auto;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    /* grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr; */
+    margin-top: 2rem;
+
 }
 
 :host.pc .title {
